# Cell-cmake

./: .gitignore  CMakeLists.txt  README.md
cmake/: process_directory_files.cmake
libs/Assimp-5.4.3/lib/cmake/assimp-5.4/: assimpTargets-release.cmake
libs/Assimp-5.4.3/lib/pkgconfig/: assimp.pc
libs/glfw3-3.4.0/lib/pkgconfig/: glfw3.pc
sources/: CMakeLists.txt
sources/cell/: cell.cpp  cell.h
sources/cell/renderer/: MaterialLibrary.h
sources/cell/resources/: texture_loader.h
sources/cell/scene/: scene_node.h
sources/demo/: main.cpp
sources/utility/: path.h
